# rpi_car

./: .camera_config.json  .engine_sound_config.json  .gitignore  .sensor_config.json  .startup_config.json  .voice_id  ADS1115_SETUP.md  ARCHITECTURE.md  AUTO_VOICE_PATTERN_VERIFICATION.md  CHANGES.md  DIAGNOSTIC_GUIDE.md  FUSED_ODOMETRY.md  FUSED_ODOMETRY_DELIVERY.md  FUSED_ODOMETRY_IMPLEMENTATION_CHECKLIST.md  FUSED_ODOMETRY_SUMMARY.md  FUSED_ODOMETRY_VISUAL_GUIDE.md  GAMEPAD_CONTROLS_GUIDE.md  GEAR_SYSTEM.md  HEARTBEAT_README.md  HOTSPOT_FALLBACK_SETUP.md  HOTSPOT_IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IR_SENSORS.md  KOKORO_TIMEOUT_FIXES.md  LOCAL_TTS_SETUP.md  MIGRATION_SUMMARY.md  MOBILE_APP_GUIDE.md  OBSTACLE_AVOIDANCE_IMPROVEMENTS.md  ODOMETRY_CALIBRATION_GUIDE.md  ODOMETRY_INTEGRATION_EXAMPLE.py  PERFORMANCE_ANALYSIS_RPM_DISPLAY.md  PICO_SENSOR_BRIDGE.md  QUICKSTART.md  QUICK_REFERENCE_CODE_CHANGES.md  README.md  RPM_ANALYSIS_MASTER_INDEX.md  RPM_DISPLAY_IMPLEMENTATION_BLUEPRINT.md  RPM_ISSUE_EXECUTIVE_SUMMARY.md  START_HERE_FUSED_ODOMETRY.md  SYSTEM_READY.md  (+57 more)
app/: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
grafana/: docker-compose.yml  server_setup.sh  telegraf.conf
public/: hunter.html
ros/: .gitignore  README.md  run_ros_docker.sh  start_rover_bridge.sh
ros/ws/src/rover_control/: package.xml  setup.py
ros/ws/src/rover_control/launch/: rover_cmd_vel.launch.py
ros/ws/src/rover_control/rover_control/: cmd_vel_bridge.py  odometry_publisher.py
rover_logs/: drive_log_20260309_132853.csv  (+46 more)
scripts/: main.py  (+39 more)
(+115 files in other folders)
